# cocos2d-js

./: .gitignore
frameworks/js-bindings/bindings/: CMakeLists.txt
frameworks/js-bindings/bindings/manual/: ScriptingCore.cpp
frameworks/js-bindings/bindings/manual/localstorage/: js_bindings_system_functions.cpp
frameworks/js-bindings/bindings/script/: jsb_boot.js
samples/js-tests/: CMakeLists.txt
samples/js-tests/project/Classes/: AppDelegate.cpp  AppDelegate.h
samples/js-tests/project/proj.ohos/: build-profile.json5
samples/js-tests/project/proj.ohos/AppScope/: app.json5
samples/js-tests/project/proj.ohos/AppScope/resources/base/element/: string.json
samples/js-tests/project/proj.ohos/entry/src/main/: module.json5
samples/js-tests/project/proj.ohos/entry/src/main/cpp/: CMakeLists.txt  main.cpp
samples/js-tests/project/proj.ohos/entry/src/main/resources/base/element/: string.json
samples/js-tests/src/ExtensionsTest/NetworkTest/: WebSocketTest.js
